--- a/security/roles/ldap_server/vars/main.yml
+++ b/security/roles/ldap_server/vars/main.yml
@@ -13,11 +13,14 @@
 # limitations under the License.
 ---
 
+openldap_config_dest_dir: "/opt/omnia/ldap"
+openldap_config_src_path: "{{ role_path }}/templates/add_domain.ldif"
 ldaptoolbox_openldap_config_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_config_root_username'] }},cn=config"
 ldaptoolbox_openldap_database_olcRootDN: "cn={{ hostvars['127.0.0.1']['openldap_database_root_username'] }},{{ ldaptoolbox_openldap_suffix }}"
 ldaptoolbox_openldap_monitor_olcRootDN: "cn=monitor"
 python_version: python3.8
 hashing_python_file: "{{ role_path }}/files/generate_hash.py"
 ldaptoolbox_olcPasswordHash: "{SHA}"
-
+openldap_configuration_mode: "0600"
+ldap_host_string: "ldapi://%2Fvar%2Frun%2Fslapd%2Fldapi"
 
