--- a/security/roles/ldap_server/tasks/set_domain.yml
+++ b/security/roles/ldap_server/tasks/set_domain.yml
@@ -35,5 +35,5 @@
     mode: "{{ openldap_configuration_mode }}"
 
 - name: Execute domain config file
-  ansible.builtin.command: ldapadd -Y EXTERNAL -H "{{ ldap_host_string }}" -f "{{ openldap_config_dest_dir }}/add_domain.ldif"
+  ansible.builtin.command: "ldapadd -Y EXTERNAL -H {{ ldap_host_string }} -f {{ openldap_config_dest_dir }}/add_domain.ldif"
   changed_when: false
