--- a/security/roles/ldap_server/tasks/set_domain.yml
+++ b/security/roles/ldap_server/tasks/set_domain.yml
@@ -16,10 +16,10 @@
 - name: Adding the path in the bashrc files
   lineinfile:
     path: /root/.bashrc
-    line: "export PATH=/usr/local/openldap/sbin:/usr/local/openldap/sbin:$PATH"
+    line: "export PATH=/usr/local/openldap/sbin:/usr/local/openldap/bin:$PATH"
     insertafter: EOF
     state: present
-    regexp: "export PATH=/usr/local/openldap/sbin:/usr/local/openldap/sbin:$PATH"
+    regexp: "export PATH=/usr/local/openldap/sbin:/usr/local/openldap/bin:$PATH"
     backrefs: yes
 
 - name: Create ldap config directory
