--- a/security/roles/ldap_server/tasks/set_domain.yml
+++ b/security/roles/ldap_server/tasks/set_domain.yml
@@ -19,8 +19,8 @@
     line: "export PATH=/usr/local/openldap/sbin:/usr/local/openldap/bin:$PATH"
     insertafter: EOF
     state: present
-    regexp: "export PATH=/usr/local/openldap/sbin:/usr/local/openldap/bin:$PATH"
-    backrefs: yes
+    # regexp: "export PATH=/usr/local/openldap/sbin:/usr/local/openldap/bin:$PATH"
+    # backrefs: yes
 
 - name: Create ldap config directory
   ansible.builtin.file:
