--- a/security/security.yml
+++ b/security/security.yml
@@ -74,13 +74,13 @@
     - login_node
   tags: freeipa
 
-- name: Validate ldap server inputs
-  hosts: localhost
-  any_errors_fatal: true
-  gather_facts: false
-  roles:
-    - ldap_validation
-  tags: test
+# - name: Validate ldap server inputs
+#   hosts: localhost
+#   any_errors_fatal: true
+#   gather_facts: false
+#   roles:
+#     - ldap_validation
+#   tags: test
 
 - name: Apply ldap server installation and config
   hosts: manager
