--- a/security/roles/ldap_server/tasks/set_domain.yml
+++ b/security/roles/ldap_server/tasks/set_domain.yml
@@ -19,21 +19,27 @@
     line: "export PATH=/usr/local/openldap/sbin:/usr/local/openldap/bin:$PATH"
     insertafter: EOF
     state: present
-    # regexp: "export PATH=/usr/local/openldap/sbin:/usr/local/openldap/bin:$PATH"
-    # backrefs: yes
 
-- name: Create ldap config directory
-  ansible.builtin.file:
-    path: "{{ openldap_config_dest_dir }}"
-    state: directory
-    mode: "{{ openldap_config_permissions }}"
-
-- name: Deploy domain config file 
-  ansible.builtin.template:
-    src: "{{ openldap_config_src_path }}"
-    dest: "{{ openldap_config_dest_dir }}"
-    mode: "{{ openldap_configuration_mode }}"
-
-- name: Execute domain config file
-  ansible.builtin.command: "ldapadd -Y EXTERNAL -H {{ ldap_host_string }} -f {{ openldap_config_dest_dir }}/add_domain.ldif"
+- name: Search schema
+  ansible.builtin.command: ldapsearch -Y EXTERNAL -H "{{ ldap_host_string }}" -b "{{ ldaptoolbox_openldap_suffix }}"  
   changed_when: false
+  register: schema_output
+
+- name: Verify and add domain config
+  when: schema_output is not search("Omnia_set_organization")
+  block:
+  - name: Create ldap config directory
+    ansible.builtin.file:
+      path: "{{ openldap_config_dest_dir }}"
+      state: directory
+      mode: "{{ openldap_config_permissions }}"
+
+  - name: Deploy domain config file 
+    ansible.builtin.template:
+      src: "{{ openldap_config_src_path }}"
+      dest: "{{ openldap_config_dest_dir }}"
+      mode: "{{ openldap_configuration_mode }}"
+
+  - name: Execute domain config file
+    ansible.builtin.command: "ldapadd -Y EXTERNAL -H {{ ldap_host_string }} -f {{ openldap_config_dest_dir }}/add_domain.ldif"
+    changed_when: false
