--- a/security/roles/security_validation/vars/main.yml
+++ b/security/roles/security_validation/vars/main.yml
@@ -97,4 +97,5 @@ success_msg_database_root_password: "Database password valid"
 fail_msg_database_root_password: "Database password invalid"
 success_msg_monitor_root_password: "Monitor password valid"
 fail_msg_monitor_root_password: "Monitor password invalid"
-ldap_cert_path_fail_msg: "LDAP cert path dont exist."
+ldap_cert_path_fail_msg: "Failed, LDAP certificate path doesn't exist."
+ldap_cert_path_success_msg: "LDAP certificate path validated"
