--- a/security/roles/ldap_client/tasks/configure_ldap_client.yml
+++ b/security/roles/ldap_client/tasks/configure_ldap_client.yml
@@ -56,8 +56,8 @@
       hostvars['127.0.0.1']['ldap_connection_type'] == 'ssl'
 
 - name: Copy the certificate to remote node
-  ansible.builtin.copy:
-    src: "{{ hostvars['127.0.0.1']['ldap_ca_cert_path'] }}"
+  ansible.builtin.fetch:
+    src: "{{ ldaptoolbox_openldap_olcTLSCACertificateFile }}"
     dest: "{{ tls_cert_path }}"
-    remote_src: false
     mode: "0644"
+    delegate_to: "{{ groups['manager'][0] }}" 
