--- a/security/roles/ldap_client/tasks/configure_sssd_conf.yml
+++ b/security/roles/ldap_client/tasks/configure_sssd_conf.yml
@@ -58,7 +58,7 @@
           ansible.builtin.replace:
             path: "{{ sssd_conf_dest }}"
             regexp: "#ldap_default_bind_dn = cn=admin,dc=omnia,dc=test"
-            replace: "ldap_default_bind_dn = cn={{ hostvars['127.0.0.1']['ldap_bind_username'] }},{{ reqd_domain_name }}"
+            replace: "ldap_default_bind_dn = cn={{ hostvars['127.0.0.1']['openldap_database_root_username'] }},{{ reqd_domain_name }}"
 
         - name: Update the authtok type
           ansible.builtin.replace:
@@ -70,10 +70,10 @@
           ansible.builtin.replace:
             path: "{{ sssd_conf_dest }}"
             regexp: "#ldap_default_authtok = blank"
-            replace: "ldap_default_authtok = {{ hostvars['127.0.0.1']['ldap_bind_password'] }}"
+            replace: "ldap_default_authtok = {{ hostvars['127.0.0.1']['openldap_database_root_password'] }}"
       when:
-        - hostvars['127.0.0.1']['ldap_bind_username'] | length > 1
-        - hostvars['127.0.0.1']['ldap_bind_password'] | length > 1
+        - hostvars['127.0.0.1']['openldap_database_root_username'] | length > 1
+        - hostvars['127.0.0.1']['openldap_database_root_password'] | length > 1
   when:
     - hostvars['127.0.0.1']['ldap_connection_type'] == 'TLS' or
       hostvars['127.0.0.1']['ldap_connection_type'] == 'tls'
