--- a/security/roles/ldap_server/tasks/ldap_prereq.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq.yml
@@ -13,27 +13,52 @@
 # limitations under the License.
 ---
 
-- name: Set domain for OpenLDAP
+- name: Set variables for OpenLDAP
   ansible.builtin.set_fact:
     ldaptoolbox_openldap_suffix: "{{ (hostvars['127.0.0.1']['domain_name'].split('.') | map('regex_replace', '^', 'dc=') | list) | join(',') }}"
+    TLS_Cetificates_directory_path: "/etc/pki/tls/certs"
+    default_certs: false
 
 - name: Create default Certificates
-  when: hostvars['127.0.0.1']['TLS_Cetificates_directory_path'] == ''
+  when: 
+    - hostvars['127.0.0.1']['CA_Cetificate_file'] == ''
+    - hostvars['127.0.0.1']['Cetificate_file'] == ''
+    - hostvars['127.0.0.1']['Cetificate_key_file'] == ''
   block:
-  - name: Set default tls certificate path when input not provided
+  - name: Set default certificates as true
     ansible.builtin.set_fact:
-      TLS_Cetificates_directory_path: "/etc/pki/tls/certs"
+      default_certs: true
 
   - name: Generate TLS certificates
     ansible.builtin.command:
       cmd: "openssl req -new -newkey rsa:4096 -days 365 -nodes -x509 -subj /C=/ST=/L=/O=/CN= -keyout {{ TLS_Cetificates_directory_path }}/ldapserver.key  -out {{ TLS_Cetificates_directory_path }}/ldapserver.crt"
     changed_when: false
 
-- name: Set default tls certificate path when input not provided
-  ansible.builtin.set_fact:
-    ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ TLS_Cetificates_directory_path }}/ldapserver.crt"
-    ldaptoolbox_openldap_olcTLSCertificateFile: "{{ TLS_Cetificates_directory_path }}/ldapserver.crt"
-    ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ TLS_Cetificates_directory_path }}/ldapserver.key"
+  - name: Set default tls certificate path for LTB playbook
+    ansible.builtin.set_fact:
+      ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ TLS_Cetificates_directory_path }}/ldapserver.crt"
+      ldaptoolbox_openldap_olcTLSCertificateFile: "{{ TLS_Cetificates_directory_path }}/ldapserver.crt"
+      ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ TLS_Cetificates_directory_path }}/ldapserver.key"
+
+- name: Set tls certificate path for omnia playbook
+  when: not default_certs
+  block:
+  - name: Copy the certificate to remote node
+    ansible.builtin.copy:
+      src: "{{ item }}"
+      dest: "{{ TLS_Cetificates_directory_path }}"
+      remote_src: false
+      mode: "0644"
+    with_items:
+      - hostvars['127.0.0.1']['CA_Cetificate_file']
+      - hostvars['127.0.0.1']['Cetificate_file']
+      - hostvars['127.0.0.1']['Cetificate_key_file']
+
+  - name: Set  tls certificate path for LTB playbook 
+    ansible.builtin.set_fact:
+      ldaptoolbox_openldap_olcTLSCACertificateFile: "{{ TLS_Cetificates_directory_path }}/{{ hostvars['127.0.0.1']['CA_Cetificate_file'] | basename }}"
+      ldaptoolbox_openldap_olcTLSCertificateFile: "{{ TLS_Cetificates_directory_path }}/{{ hostvars['127.0.0.1']['Cetificate_file'] | basename }}"
+      ldaptoolbox_openldap_olcTLSCertificateKeyFile: "{{ TLS_Cetificates_directory_path }}/{{ hostvars['127.0.0.1']['Cetificate_key_file'] | basename }}"
 
 - name: Genarate password hash for OpenLDAP config
   delegate_to: localhost
