--- a/security/security.yml
+++ b/security/security.yml
@@ -108,12 +108,13 @@
         name: ldap_server
         tasks_from: set_domain.yml
 
-# - name: Apply ldap client installation and config
-#  hosts: manager, compute, login
-#  gather_facts: false
-#  roles:
-#    - ldap_client
-#  tags: ldap
+- name: Apply ldap client installation and config
+  hosts: manager, compute, login
+  gather_facts: false
+  vars: ldaptoolbox_openldap_olcTLSCACertificateFile
+  roles:
+    - ldap_client
+  tags: ldap
 
 - name: Configure secure login
   hosts: login
