--- a/security/security.yml
+++ b/security/security.yml
@@ -111,7 +111,7 @@
 - name: Apply ldap client installation and config
   hosts: manager, compute, login
   gather_facts: false
-  vars: ldaptoolbox_openldap_olcTLSCACertificateFile
+  vars: "{{ ldaptoolbox_openldap_olcTLSCACertificateFile }}"
   roles:
     - ldap_client
   tags: ldap
