--- a/security/roles/security_validation/tasks/fetch_ldap_server_input.yml
+++ b/security/roles/security_validation/tasks/fetch_ldap_server_input.yml
@@ -51,7 +51,7 @@
 
 - name: Validate Certificate directory
   when:
-  - CA_Cetificate_file }}" != ''
+  - CA_Cetificate_file != ''
   - Certificate_file != ''
   - Certificate_key_file != ''
   block:
