--- a/security/roles/ldap_server/tasks/ldap_prereq.yml
+++ b/security/roles/ldap_server/tasks/ldap_prereq.yml
@@ -51,7 +51,7 @@
       mode: "0644"
     with_items:
       - "{{ hostvars['127.0.0.1']['CA_Cetificate_file'] }}"
-      - "{{ hostvars['127.0.0.1']['Cetificate_file'] }}"
+      - "{{ hostvars['127.0.0.1']['Certificate_file'] }}"
       - "{{ hostvars['127.0.0.1']['Cetificate_key_file'] }}"
 
   - name: Set  tls certificate path for LTB playbook 
