--- a/input/security_config.yml
+++ b/input/security_config.yml
@@ -95,7 +95,7 @@ user_home_dir: "/home/omnia-share"
 # By default it is set to false indicating security features will not be configured
 enable_secure_login_node: false
 
-CA_Cetificate_file: ""
+CA_Certificate_file: ""
 Certificate_file: ""
 Certificate_key_file: ""
 openldap_config_root_username: "admin"
