--- a/security/roles/ldap_client/tasks/configure_ldap_client.yml
+++ b/security/roles/ldap_client/tasks/configure_ldap_client.yml
@@ -57,7 +57,7 @@
 
 - name: Copy the certificate to remote node
   ansible.posix.synchronize:
-    src: "{{ ldaptoolbox_openldap_olcTLSCACertificateFile }}"
+    src: "{{ hostvars[groups['manager'][0]]['ldaptoolbox_openldap_olcTLSCACertificateFile'] }}"
     dest: "{{ tls_cert_path }}"
     mode: pull
   delegate_to: "{{ groups['manager'][0] }}" 
