--- a/security/roles/ldap_client/tasks/configure_ldap_client.yml
+++ b/security/roles/ldap_client/tasks/configure_ldap_client.yml
@@ -59,5 +59,5 @@
   ansible.posix.synchronize:
     src: "{{ hostvars[groups['manager'][0]]['ldaptoolbox_openldap_olcTLSCACertificateFile'] }}"
     dest: "{{ tls_cert_path }}"
-    mode: pull
+    mode: push
   delegate_to: "{{ groups['manager'][0] }}" 
