--- a/security/roles/ldap_client/tasks/configure_sssd_conf.yml
+++ b/security/roles/ldap_client/tasks/configure_sssd_conf.yml
@@ -16,7 +16,7 @@
 - name: Extract the domain name required by LDAP
   ansible.builtin.set_fact:
     reqd_domain_name: "{{ (hostvars['127.0.0.1']['domain_name'].split('.') | map('regex_replace', '^', 'dc=') | list) | join(',') }}"
-    certificate_path: "{{ hostvars['127.0.0.1']['ldap_ca_cert_path'].split('/') | select | list }}"
+    certificate_path: "{{ hostvars['127.0.0.1']['CA_Certificate_file'].split('/') | select | list }}"
 
 - name: Update sssd.conf file for TLS connection type
   block:
