--- a/security/roles/ldap_client/tasks/configure_authselect.yml
+++ b/security/roles/ldap_client/tasks/configure_authselect.yml
@@ -42,3 +42,7 @@
 - name: Display IP address and interface information
   debug:
     var: ansible_interfaces
+
+- name: Display IP
+  debug:
+    var: hostvars[inventory_hostname]['ansible_env'].SSH_CONNECTION.split(' ')[2]
