--- a/security/roles/ldap_client/tasks/configure_ldap_client.yml
+++ b/security/roles/ldap_client/tasks/configure_ldap_client.yml
@@ -58,6 +58,7 @@
 - name: Copy the certificate to remote node
   ansible.posix.synchronize:
     src: "{{ hostvars[groups['manager'][0]]['ldaptoolbox_openldap_olcTLSCACertificateFile'] }}"
-    dest: "{{ tls_cert_path }}"
-    mode: pull
+    dest: "rsync://{{ hostvars[item]['ansible_env'].SSH_CONNECTION.split(' ')[2] }}{{ tls_cert_path }}"
   delegate_to: "{{ hostvars[groups['manager'][0]]['ansible_env'].SSH_CONNECTION.split(' ')[2] }}" 
+  with_items: 
+  - "{{ groups['compute'] }}"
