--- a/security/roles/ldap_client/tasks/configure_ldap_client.yml
+++ b/security/roles/ldap_client/tasks/configure_ldap_client.yml
@@ -63,5 +63,6 @@
   delegate_to: "{{ hostvars[item]['ansible_env'].SSH_CONNECTION.split(' ')[2] }}" 
   with_items: 
   - "{{ groups['compute'] }}"
+  - "{{ groups['manager'] }}"
 
   #{{ hostvars[item]['ansible_env'].SSH_CONNECTION.split(' ')[2] }}
