--- a/security/roles/login_common/tasks/enable_dnf_module.yml
+++ b/security/roles/login_common/tasks/enable_dnf_module.yml
@@ -1,4 +1,4 @@
-#  Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+#  Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -20,11 +20,10 @@
       ( ansible_distribution | lower == os_rocky ) or
       ( ansible_distribution | lower == os_redhat )
     - ( ansible_distribution_version >= os_version )
+  changed_when: true
 
-- name: Switch to the RPMs delivered through the idm:DL1 stream(It may take 5-10 mins)
+- name: Switch to the RPMs delivered through the idm:DL1 stream(It may take 5-10 mins) # noqa: command-instead-of-module
   ansible.builtin.command: yum distro-sync --skip-broken --nobest --exclude={{ yum_distro_exclude1 }},{{ yum_distro_exclude2 }} -y
   changed_when: true
   failed_when: false
-  args:
-    warn: false
   when: ansible_distribution | lower == os_redhat
