--- a/security/roles/login_node/tasks/install_ipa_client.yml
+++ b/security/roles/login_node/tasks/install_ipa_client.yml
@@ -1,4 +1,4 @@
-#  Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+#  Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -14,13 +14,12 @@
 ---
 
 - name: Configure freeipa client
+  when: not freeipa_client_status
   block:
-    - name: Install DL1 - client(It may take 5-10 mins)
+    - name: Install DL1 - client(It may take 5-10 mins) # noqa: command-instead-of-module
       ansible.builtin.command: yum module install idm:DL1/client -y
       changed_when: true
       failed_when: false
-      args:
-        warn: false
       when: ansible_distribution | lower == os_redhat
 
     - name: Install freeipa client package
@@ -32,8 +31,6 @@
       ansible.builtin.command: rm -rf {{ cert_path }}
       changed_when: false
       failed_when: false
-      args:
-        warn: false
       when: ansible_distribution | lower == os_redhat
 
     - name: Set hostname of ipa server when manager node has ipa server installed
@@ -89,4 +86,3 @@
         state: started
         enabled: true
       failed_when: false
-  when: not freeipa_client_status
