--- a/security/roles/security_validation/tasks/include_omnia_config.yml
+++ b/security/roles/security_validation/tasks/include_omnia_config.yml
@@ -1,4 +1,4 @@
-#  Copyright 2022 Dell Inc. or its subsidiaries. All Rights Reserved.
+#  Copyright 2023 Dell Inc. or its subsidiaries. All Rights Reserved.
 #
 #  Licensed under the Apache License, Version 2.0 (the "License");
 #  you may not use this file except in compliance with the License.
@@ -28,6 +28,7 @@
   ansible.builtin.command: >-
     {{ ansible_vault_path.stdout.split(' ')[1] }} decrypt {{ omnia_config_file }} --vault-password-file {{ omnia_vaultname }}
   when: "'$ANSIBLE_VAULT;' in config_content.stdout"
+  changed_when: true
 
 - name: Include variable file omnia_config.yml
   ansible.builtin.include_vars: "{{ omnia_config_file }}"
